# pure-hangman

./: LICENSE  hangman.cabal  stack.yaml
src/: Main.hs
