name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
homepage:            https://github.com/Francososa/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Francisco Sosa
maintainer:          franky.sosa@gmail.com
copyright:           Copyright (c) 2019 Francisco Sosa
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
